--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.15.21",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-charts": "^7.11.1",
     "@mui/x-data-grid": "^7.11.0",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
