--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-slick": "^0.30.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
     "yup": "^1.4.0"
   },
