--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@mui/x-charts": "^7.11.1",
     "@mui/x-data-grid": "^7.11.0",
     "@reduxjs/toolkit": "^2.2.5",
+    "apexcharts": "^4.3.0",
     "axios": "^1.7.2",
     "history": "^5.3.0",
+    "install": "^0.13.0",
+    "npm": "^11.0.0",
     "react": "^18.3.1",
-    "react-apexcharts": "^1.4.1",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
