--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.52.1",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
