--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "apexcharts": "^4.3.0",
     "axios": "^1.7.2",
+    "highlight.js": "^11.11.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.2.0",
@@ -33,6 +34,11 @@
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
     "redux": "^5.0.1",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
+    "remark-autolink-headings": "^8.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-slug": "^8.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
     "yup": "^1.4.0"
