added mermaid viewer

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "apexcharts": "^4.3.0",
     "axios": "^1.7.2",
     "highlight.js": "^11.11.1",
+    "mermaid": "^11.12.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.2.0",
